--- a/.github/workflows/yeqinggui8813.yml
+++ b/.github/workflows/yeqinggui8813.yml
@@ -1,32 +1,27 @@
 name: yeqinggui8813
+
 on:
   workflow_dispatch:
   schedule:
-    - cron: '36 3/6 * * *'
-
-jobs:  # 15726
+    - cron: '27 3/6 * * *'
+jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
       - name: yeqinggui8813
         env:
-          ugyf5046: ${{ secrets.ugyf5046 }}
+          vvk448: ${{ secrets.vvk448 }}
         run: |
-          echo $ugyf5046 | jq -r .cyen0 | /bin/bash
-          echo $rsc342 | jq -r .cue47 | /bin/bash
-          echo $m827 | jq -r .jp5 | /bin/bash
-          echo $v93 | jq -r .nir1 | /bin/bash
-          echo $bfi40872 | jq -r .pgqzl25 | /bin/bash
-          echo $g2553 | jq -r .us45 | /bin/bash
-          echo $nrayo136 | jq -r .ba54247 | /bin/bash
-          echo $dlae9621 | jq -r .l70256 | /bin/bash
-          echo $kvb75063 | jq -r .edz3 | /bin/bash
-          echo $ysxnk9716 | jq -r .aj63914 | /bin/bash
-          echo $xwpwf0578 | jq -r .klf1 | /bin/bash
-          echo $acikq8 | jq -r .bjguv1310 | /bin/bash
-          echo $wps3171 | jq -r .dmwp46557 | /bin/bash
-          echo $ln52 | jq -r .sf2 | /bin/bash
-          echo $w00916 | jq -r .u3314 | /bin/bash
-          echo $necjv9919 | jq -r .tzgp86963 | /bin/bash
+          echo $vvk448 | jq -r .oxvhv59867 | /bin/bash
+          echo $iichu824 | jq -r .g2873 | /bin/bash
+          echo $bmgyw75 | jq -r .dnpeu2 | /bin/bash
+          echo $uhcn2121 | jq -r .ij5862 | /bin/bash
+          echo $fcfu24 | jq -r .hjguw855 | /bin/bash
+          echo $jeshb08 | jq -r .ds5705 | /bin/bash
+          echo $huo12154 | jq -r .ff5 | /bin/bash
+          echo $hnysu7651 | jq -r .qd067 | /bin/bash
+          echo $xqim8 | jq -r .sw06896 | /bin/bash
+          echo $dy3330 | jq -r .nb4 | /bin/bash
+          echo $ydvs6140 | jq -r .njnoi69 | /bin/bash
 
